mongo/overlays/west2/deployment-mongo-svc-c.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: mongo-c
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: mongo-c
    spec:
      containers: 
        - image: mongo
          name: mongo-c
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--bind_ip_all"
          imagePullPolicy: IfNotPresent
          volumeMounts: 
            - mountPath: /data/db
              name: mongodb-data
      volumes: 
        - name: mongodb-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc-c
  annotations:
    skupper.io/proxy: tcp
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    application: mongo-c
---
