mongo/overlays/west2/route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: amqps
spec:
  host: inter-router.sku-mongo.apps.west-2.sysdeseng.com
  port:
    targetPort: inter-router
  tls:
    termination: passthrough
  to:
    kind: Service
    name: messaging
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
